@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3366 2019/08/09 19:09:28 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3367 2019/08/09 19:10:28 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5489,3 +5489,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added www/R-httr version 1.4.1 [brook 2019-08-09]
 	Added www/R-gh version 1.0.1 [brook 2019-08-09]
 	Added devel/R-usethis version 1.5.1 [brook 2019-08-09]
+	Added devel/R-rcmdcheck version 1.3.3 [brook 2019-08-09]
